Fixed layout issues on iOS

--- a/shared/main.css
+++ b/shared/main.css
@@ -187,6 +187,7 @@ input {
 	font-family: 'Antic Slab', serif;
 	text-align: center;
 	background-color: #ffffff;
+    padding: 0px;
 }
 
 #link {
